# rocket-auth-login

./: Cargo.toml  readme.md  sql_scratchpad.sql  tiggers.sql
database/: create_login.sql
database/scratchpad/: create_login-old.sql  create_login.sql  create_users_table.sql  db-backup_login-db.sql  db-backup_login-restructured-u_original.sql  login-db-backup_before-drop.sql  sql_scratchpad.sql  tiggers.sql  triggers2.sql
example/: Cargo.toml
example/database_example/: Cargo.toml  login_database.sql  readme.md
example/database_example/src/: administrator.rs  db.rs  layout.rs  main.rs
example/src/: administrator.rs  layout.rs  main.rs
example/static/: login.js
examples/: Cargo.toml
examples/basic_example/: Cargo.toml  license  readme.md
examples/basic_example/src/: main.rs
examples/basic_example/static/: login.js
examples/database_example/: Cargo.toml  readme.md
examples/database_example/src/: administrator.rs  db.rs  layout.rs  main.rs
examples/database_example/static/: login.js
examples/login/: administrator.rs  layout.rs  main.rs
examples/static/: login.js
examples/tls_example/: Cargo.lock.old  Cargo.toml  Rocket.toml  ca_key.pem  login_database_salted-passwords-fixed-salt.sql  login_database_salted-passwords-not-null.sql  login_database_salted-passwords.sql  readme.md
examples/tls_example/private/: ca_cert.pem  certs.pem  gen_cert.sh  key.pem
examples/tls_example/src/: administrator.rs  db.rs  main.rs  password.rs
examples/tls_example/static/: login.js
notes/: old-markdown-notes.txt  readme-database-old.md  readme-tls-backup.md
src/: authorization.rs  lib.rs  sanitization.rs
