[package]
name = "rocket-auth-login"
version = "0.5.0"
authors = ["Andrew Prindle <prindle.andrew@gmail.com>"]

[dependencies]
htmlescape = "0.3.1"
lazy_static = "0.2.8"
regex = "0.2.2"
rocket = "0.3.3"
rocket_codegen = "0.3.*"
# rocket-simpleauth = "0.3.*"
# rocket = "0.3.2"
# rocket_codegen = "0.3.2"



