[package]
name = "rocket-auth-login-example"
version = "1.0.0"
authors = ["Andrew Prindle <prindle.andrew@gmail.com>"]

[dependencies]
htmlescape = "0.3.1"
lazy_static = "0.2.8"
regex = "0.2.2"
rmp-serde = "0.13.7"
rocket = "0.3.3"
rocket_codegen = "0.3.*"
serde_json = "1.0.2"
serde = "1.0.11"
serde_derive = "1.0.11"
time = "0.1"
titlecase = "0.10.0"


rocket-auth-login = { path = "../../" }


