[package]
name = "rocket-auth-login-tls"
version = "1.0.0"
authors = ["Andrew Prindle <prindle.andrew@gmail.com>"]

[dependencies]
argon2rs = "0.2.5"
dotenv = "0.10.1"
htmlescape = "0.3.1"
rand = "0.3.18"
lazy_static = "0.2.8"
regex = "0.2.2"
rmp-serde = "0.13.7"
# rocket = "0.3.3"
rocket = { version = "0.3.3", features = ["tls"] }
rocket_codegen = "0.3.*"
serde_json = "1.0.2"
serde = "1.0.11"
serde_derive = "1.0.11"
time = "0.1"
titlecase = "0.10.0"
postgres = { version = "0.15.1", features = ["with-chrono"] }
# postgres = "0.15.1"
r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"

rocket-auth-login = { path = "../../" }


