[package]
name = "rocket-auth-login-tls"
version = "1.0.0"
authors = ["Andrew Prindle <prindle.andrew@gmail.com>"]
publish = false

[dependencies]
argon2rs = "0.2.5"
dotenv = "0.13"
htmlescape = "0.3.1"
rand = "0.6"
lazy_static = "1.2"
regex = "1.1"
rmp-serde = "0.13.7"
rocket = {version="0.4", features=["tls"]}
serde_json = "1.0"
serde = {version="1.0", features=["derive"] }

time = "0.1"
titlecase = "0.10.0"
postgres = { version = "0.15.1", features = ["with-chrono"] }
# postgres = "0.15.1"
r2d2 = "0.7.4"
r2d2_postgres = "0.13.0"

rocket-auth-login = { path = "../../" }


